# photucuda

./: CMakeLists.txt  LICENSE.md  README.md
include/: convolution.hpp  image_io.hpp
src/: convolution.cu  image_io.cpp  main.cpp
